
version 0.11.0-pre8 (03/23/2001):
	* Fixed a problem with MSN not detecting signoffs and buddy updates.
	* Implemented away options in MSN
	* Alt-[1-9] to go to [1-9]th pane in tabbed convo window
	* Jabber fixes, Oscar fixes (!), Yahoo fixes, TOC fixes
	* Can use Alt to access menu, and Ctl-char for certain actions
	  (thanks baldnik)
	* Oscar blocking works (?)

version 0.11.0-pre7 (03/16/2001):
	* Can build RPMs as non-root
	* New yahoo library (can use HTTP proxy)
	* Command-line arg to specify config file (thanks Jason Boerner)
	* Can view all conversations in one tabbed window (Control-[ and
	  Control-] move left and right respectively; Control-Tab moves
	  to the next unread, or the next tab if there are no unread tabs)
	* Tooltips on links work again
	* Can log system notices: signons/signoffs, awayness and idleness
	  (thanks Andrew Echols)
	* MSN fixes
	* Applet fixes

version 0.11.0-pre6 (03/06/2001):
	* Fixed bug with NAS support
	* Napster plugin is included again
	  (Thanks for pointing out that it was missing,
	  (Yan V. Bulgak)
	* Oscar can: search by email, request confirmation, change password
	* TOC fixes
	* ICQ fixes
	* Faster HTML parsing/rendering

version 0.11.0-pre5 (02/26/2001):
	* Minor GUI changes
	* ICQ Alias problem fixed
	* Negative times fixed
	* Cannot create blank away messages/messages with blank titles
	* Can right-click Edit Buddies list to alias/add pounce/etc.
	* Ability to independently set accounts as away
	* Can use all away states for ICQ, Yahoo (N/A, Be Right Back, etc.)
	* Fixed hanging trees
	* Can close windows by hitting 'Esc' (optional)
	* Better HTML Widget
	* Can toggle timestamps by hitting F2 (optional)
	* Rewritten file transfer for TOC
	* Jabber got chat
	* Log Viewer (courtesy BMiller)
	* Can save conversation history
	* Napster can kinda sorta download files sometimes :)
	* You can activate IDs in Yahoo
	* ICQ upgraded to use icqlib 1.1.5

version 0.11.0-pre4:
	* ICQ upgraded to use icqlib 1.1.0